# adin-llvm-pass

./: .gitignore  CMakeLists.txt  LLVMBuild.txt  README.md
AddressInterceptPass/: AddressIntercept.cpp  AllocaRecognize.cpp  AllocaRecognize.h  CMakeLists.txt  InlineInstrumentation.cpp  InlineInstrumentation.h  Logger.cpp  Logger.h  MemoryOperationRecognize.cpp  MemoryOperationRecognize.h  Settings.h
src/: AddressIntercept.cpp  AllocaRecognize.h  InlineInstrumentation.cpp  InlineInstrumentation.h  Logger.cpp  Logger.h  MemoryOperationRecognize.h
test/ir/: 64bit-load.ll  alloca-enable.ll  alloca.ll  cast-set-adin-function.ll  cast.ll  check_all.sh  global.ll  load_pointer.ll  mem_fn.ll  simple-lit.py  skip_global_var.ll  store_pointer_to_pointer.ll
test/src/: 64bit-load.c  alloca.c  cast.c  global.c  load_pointer.c  mem_fn.c  store_pointer_to_pointer.c
